# blog_bundle_adjust

./: .gitignore  CMakeLists.txt  build.sh  build_env.sh  env.sh  run_env.sh
python/: compute_derivatives_1st.py  compute_derivatives_2nd.py  derivatives.py
script/: run_appl_bundle_adjust_ceres_solver.sh  run_appl_bundle_adjust_gradient_descent.sh  run_appl_bundle_adjust_pure_newton.sh  run_appl_compute_track_locations.sh
shells/: run_appl_bundle_adjust_ceres_solver.sh  run_appl_bundle_adjust_gradient_descent.sh  run_appl_bundle_adjust_pure_newton.sh  run_appl_compute_track_locations.sh  run_appl_create_artifical_data.sh
src/applications/: CMakeLists.txt  appl_bundle_adjustment_ceres_solver.cc  appl_bundle_adjustment_gradient_descent.cc  appl_bundle_adjustment_pure_newton.cc  appl_compute_track_locations.cc  appl_create_artificial_data.cc  appl_utility.h
src/core/: CMakeLists.txt
src/core/include/: bundle_adjust.h  common_def.h  error_metric.h  geometry.h  hash.h  matrix_computation.h  optimizations.h  random_noise.h
src/core/src/: bundle_adjust.cc  ceres_reproj_error.h  ceres_solver.cc  compute_hessian.cc  derivative_common.h  derivative_first_with_angle_axis.h  derivative_u_second_with_angle_axis.h  derivative_v_second_with_angle_axis.h  differential_operators.cc  differential_operators.h  error_metric.cc  geometry.cc  gradient_descent.cc  line_searches.cc  matrix_computation.cc  pure_newton.cc  random_noise.cc  rotations.h
src/core/test/: test_rq_decomposition.cc
src/optimization/: CMakeLists.txt
src/optimization/include/: bundle_adjust.h  common_def.h  error_metric.h  matrix_computation.h  optimizations.h
src/optimization/src/: bundle_adjust.cc  ceres_reproj_error.h  ceres_solver.cc  compute_hessian.cc  derivative_first_with_angle_axis.h  derivative_u_second_with_angle_axis.h  derivative_v_second_with_angle_axis.h  differential_operators.cc  differential_operators.h  error_metric.cc  geometry.cc  gradient_descent.cc  line_searches.cc  pure_newton.cc
src/utility/: CMakeLists.txt
src/utility/include/: file_utility.h  utility.h  visualize.h
src/utility/src/: file_utility.cc  utility.cc  visualize.cc
